--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/node": "^22.7.3",
     "dotenv": "^16.4.5",
+    "knex": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
