--- a/package.json
+++ b/package.json
@@ -15,19 +15,23 @@
     "@types/node": "^22.7.4",
     "dotenv": "^16.4.5",
     "knex": "^3.1.0",
+    "stripe": "^16.12.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.0",
-    "@types/formidable": "^2.0.6",
+    "@types/formidable": "2",
     "@types/jest": "^29.5.13",
     "@types/jsonfile": "^6.1.4",
     "@types/pg": "^8.11.10",
+    "@types/stripe": "^8.0.417",
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
-    "formidable": "^2.1.2",
+    "formidable": "2",
     "jest": "^29.7.0",
     "jsonfile": "^6.1.0",
     "pg": "^8.13.0",
