--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^22.7.4",
     "dotenv": "^16.4.5",
     "knex": "^3.1.0",
+    "openai": "^4.67.1",
     "stripe": "^16.12.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
