--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@types/node": "^22.7.4",
     "dotenv": "^16.4.5",
     "knex": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "node-fetch": "^3.3.2",
+    "replicate": "^0.34.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
@@ -27,12 +27,15 @@
     "@types/pg": "^8.11.10",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
-    "formidable": "^2.1.2",
+    "formidable": "^3.5.1",
     "jest": "^29.7.0",
     "jsonfile": "^6.1.0",
     "pg": "^8.13.0",
     "ts-jest": "^29.2.5",
-    "ts-node-dev": "^2.0.0"
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.2"
   },
-  "repository": "git@github.com:michyipyhm/TECKY_BAD_Project.git"
+  "repository": "git@github.com:michyipyhm/TECKY_BAD_Project.git",
+  "type": "module"
 }
