--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
     "@types/express-session": "^1.18.0",
     "@types/formidable": "2",
     "@types/jest": "^29.5.13",
+    "@types/jsonfile": "^6.1.4",
     "@types/node": "^22.7.4",
+    "@types/pg": "^8.11.10",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.2",
-    "@types/jsonfile": "^6.1.4",
-    "@types/pg": "^8.11.10"
+    "typescript": "^5.6.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "express-session": "^1.18.0",
+    "formidable": "2",
     "jsonfile": "^6.1.0",
     "knex": "^3.1.0",
     "pg": "^8.13.0",
-    "replicate": "^0.34.1",
-    "bcryptjs": "^2.4.3",
-    "express": "^4.21.0",
-    "express-session": "^1.18.0",
-    "formidable": "2"
+    "replicate": "^0.34.1"
   }
 }
