--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "ts-node main.ts",
     "dev": "ts-node-dev main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "data": "psql -f database/init.sql && ts-node database/insert_user.ts && psql -f database/data.sql"
+
   },
   "repository": "git@github.com:michyipyhm/TECKY_BAD_Project.git",
   "author": "michyipyhm <micmicyip@hotmail.com>",
