--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "ts-node main.ts",
     "dev": "ts-node-dev main.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "latest": "yarn knex migrate:latest",
+    "rollback": "yarn knex migrate:rollback",
+    "seed": "yarn knex seed:run",
     "data": "psql -f database/init.sql && ts-node database/insert_user.ts && psql -f database/data.sql"
 
   },
