--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
-    "formidable": "2",
+    "formidable": "v3",
     "fs-extra": "^11.2.0",
     "jsonfile": "^6.1.0",
     "knex": "^3.1.0",
